--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,7 +2,7 @@
     "plugins": [
     ],
     "env": {
-        "browser": false,
+        "browser": true,
         "commonjs": true,
         "node": true,
         "es6": true
